--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -167,7 +167,7 @@ ViewDetailsScreen As screen:
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
                 Height: |-
-                    =LeadTrackingNumber_DataCard1.Height+ContractNumberVDS.Height + 'Building NameVDS'.Height + 'PinCode VDS'.Height + 'Address VDS'.Height + 'UnitCount VDS'.Height + UnitDescriptionVDS.Height + 'PrimaryScopeofWorkLID VDS'.Height + SecondaryScopeofWorkLIDVDS.Height + ManuallyScopeOfWorkVDS.Height + EstimatedHoursVDS.Height + Material_DataCard1_4.Height + 'Unit Down_DataCard2_4'.Height + 'Additional expenses required_DataCard2_3'.Height + 
+                    =LeadTrackingNumber_DataCard1.Height+ContractNumberVDS.Height + 'Building NameVDS'.Height + 'PinCode VDS'.Height + 'Address VDS'.Height + 'UnitCount VDS'.Height + UnitDescriptionVDS.Height + 'PrimaryScopeofWorkLID VDS'.Height + SecondaryScopeofWorkLIDVDS.Height + ManuallyScopeOfWorkVDS.Height + EstimatedHoursVDS.Height + MaterialVDS.Height + 'Unit Down_DataCard2_4'.Height + 'Additional expenses required_DataCard2_3'.Height + 
                          'Travel Required_DataCard2_3'.Height + 'Communicated to Customer_DataCard2_3'.Height +
                          If(IsBlank(DataCardValue3.Text),0,
                           'CustomerName _DataCard2'.Height) +If(IsBlank(DataCardValue4.Text),0, 'CustomerContact _DataCard1'.Height)+
@@ -790,7 +790,7 @@ ViewDetailsScreen As screen:
                         Y: =lblEstimatedHoursVDS.Y + lblEstimatedHoursVDS.Height
                         ZIndex: =2
 
-                Material_DataCard1_4 As typedDataCard.textualEditCard:
+                MaterialVDS As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="crd59_material"
@@ -803,13 +803,13 @@ ViewDetailsScreen As screen:
                     Height: =50
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_notes")
                     Required: =false
-                    Update: =DataCardValue19_4.Text
+                    Update: =intxtMaterialVDS.Text
                     Width: =Parent.Width
                     X: =0
                     Y: =11
                     ZIndex: =1
 
-                    DataCardKey20_4 As label:
+                    lblMaterialVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         FontWeight: =FontWeight.Bold
@@ -823,7 +823,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue19_4 As text:
+                    intxtMaterialVDS As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         Default: |-
                             =//Gallery1.Selected.Material
@@ -846,35 +846,8 @@ ViewDetailsScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardKey20_4.Y + DataCardKey20_4.Height 
+                        Y: =lblMaterialVDS.Y + lblMaterialVDS.Height 
                         ZIndex: =2
-
-                    ErrorMessage20_4 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue19_4.Y + DataCardValue19_4.Height
-                        ZIndex: =3
-
-                    StarVisible20_4 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey20_4.Height
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =DataCardKey20_4.Y
-                        ZIndex: =4
 
                 "'Unit Down_DataCard2_4' As typedDataCard.comboBoxOptionSetSingleEditCard":
                     BorderColor: =RGBA(0, 0, 0, 1)
