--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -168,16 +168,16 @@ ViewDetailsScreen As screen:
                 FillPortions: =0
                 Height: |-
                     =LeadTrackingNumber_DataCard1.Height+ContractNumberVDS.Height + 'Building NameVDS'.Height + 'PinCode VDS'.Height + 'Address VDS'.Height + 'UnitCount VDS'.Height + UnitDescriptionVDS.Height + 'PrimaryScopeofWorkLID VDS'.Height + SecondaryScopeofWorkLIDVDS.Height + ManuallyScopeOfWorkVDS.Height + EstimatedHoursVDS.Height + MaterialVDS.Height + UnitDownVDS.Height + AdditionalExpensesRequiredVDS.Height + 
-                         TravelRequiredVDS.Height + 'Communicated to Customer_DataCard2_3'.Height +
-                         If(IsBlank(DataCardValue3.Text),0,
-                          'CustomerName _DataCard2'.Height) +If(IsBlank(DataCardValue4.Text),0, 'CustomerContact _DataCard1'.Height)+
+                         TravelRequiredVDS.Height + CommunicatedtoCustomerVDS.Height +
+                         If(IsBlank(intxtCustomerNameVDS.Text),0,
+                          CustomerNameVDS.Height) +If(IsBlank(intxtCustomerContactVDS.Text),0, CustomerContactVDS.Height)+
                          If(IsBlank(intxtTotalEstimatedHoursofTravelVDS.Text),0,
                           TotalEstimatedHoursofTravelVDS.Height) + If(
                         IsBlank(intxtTotalEstimatedExpenseVDS.Text),
                         0,
                         TotalEstimatedExpenseVDS.Height)+If(
-                        IsBlank(DataCardKey8_1.Text),
-                        0,LeadComment_DataCard1.Height
+                        IsBlank(lblLeadCommentvalueVDS.Text),
+                        0,LeadCommentVDS.Height
                     )+50
                 Item: =VarFormMode
                 LayoutMinHeight: =250
@@ -1071,7 +1071,7 @@ ViewDetailsScreen As screen:
                         Y: =lblTotalEstimatedHoursofTravelVDS.Y + lblTotalEstimatedHoursofTravelVDS.Height + 5
                         ZIndex: =2
 
-                "'Communicated to Customer_DataCard2_3' As typedDataCard.comboBoxOptionSetSingleEditCard":
+                CommunicatedtoCustomerVDS As typedDataCard.comboBoxOptionSetSingleEditCard:
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="crd59_communicatedtocustomer"
                     Default: =ThisItem.CommunicatedToCustomer
@@ -1089,34 +1089,7 @@ ViewDetailsScreen As screen:
                     Y: =17
                     ZIndex: =1
 
-                    ErrorMessage17_3 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =
-                        ZIndex: =3
-
-                    StarVisible17_3 As label:
-                        Align: =Align.Center
-                        Height: =
-                        Size: =21
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =
-                        ZIndex: =4
-
-                    Checkbox4_19 As checkbox:
+                    cboxTotalEstimatedHoursofTravelVDS As checkbox:
                         CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                         Default: =true
                         DisabledBorderColor: =RGBA(0, 0, 0, 1)
@@ -1135,7 +1108,7 @@ ViewDetailsScreen As screen:
                         X: =30
                         ZIndex: =5
 
-                "'CustomerName _DataCard2' As typedDataCard.textualEditCard":
+                CustomerNameVDS As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_customername"
@@ -1143,17 +1116,17 @@ ViewDetailsScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customername")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(DataCardValue3),90,0)
+                    Height: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerNameVDS),90,0)
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customername")
                     Required: =false
-                    Update: =DataCardValue3.Text
-                    Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(DataCardValue3),true,false)
+                    Update: =intxtCustomerNameVDS.Text
+                    Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerNameVDS),true,false)
                     Width: =Parent.Width
                     X: =0
                     Y: =18
                     ZIndex: =1
 
-                    DataCardKey3 As label:
+                    lblCustomerNameVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
@@ -1167,7 +1140,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue3 As text:
+                    intxtCustomerNameVDS As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         BorderThickness: =0
                         Default: =ThisItem.'CustomerName '
@@ -1185,35 +1158,10 @@ ViewDetailsScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardKey3.Y + DataCardKey3.Height + 5
+                        Y: =lblCustomerNameVDS.Y + lblCustomerNameVDS.Height + 5
                         ZIndex: =2
 
-                    ErrorMessage5 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue3.Y + DataCardValue3.Height
-                        ZIndex: =3
-
-                    StarVisible5 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey3.Height
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =DataCardKey3.Y
-                        ZIndex: =4
-
-                "'CustomerContact _DataCard1' As typedDataCard.textualEditCard":
+                CustomerContactVDS As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_customercontact"
@@ -1221,17 +1169,17 @@ ViewDetailsScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customercontact")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(DataCardValue4),90,0)
+                    Height: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerContactVDS),90,0)
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                     Required: =false
-                    Update: =DataCardValue4.Text
-                    Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(DataCardValue4),true,false)
+                    Update: =intxtCustomerContactVDS.Text
+                    Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerContactVDS),true,false)
                     Width: =Parent.Width
                     X: =0
                     Y: =19
                     ZIndex: =1
 
-                    DataCardKey4 As label:
+                    lblCustomerContactVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
@@ -1245,7 +1193,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue4 As text:
+                    intxtCustomerContactVDS As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         Default: =VarLeadPhoneNumber
                         DelayOutput: =true
@@ -1262,35 +1210,10 @@ ViewDetailsScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardKey4.Y + DataCardKey4.Height + 5
+                        Y: =lblCustomerContactVDS.Y + lblCustomerContactVDS.Height + 5
                         ZIndex: =2
 
-                    ErrorMessage6 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue4.Y + DataCardValue4.Height
-                        ZIndex: =3
-
-                    StarVisible6 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey4.Height
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Wrap: =false
-                        Y: =DataCardKey4.Y
-                        ZIndex: =4
-
-                LeadComment_DataCard1 As typedDataCard.textualEditCard:
+                LeadCommentVDS As typedDataCard.textualEditCard:
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="shlrf_leadcomment"
                     Default: =ThisItem.LeadComment
@@ -1300,14 +1223,14 @@ ViewDetailsScreen As screen:
                     Height: =50
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_leadcomment")
                     Required: =false
-                    Update: =DataCardValue8.Text
+                    Update: =lblLeadCommentvalueVDS.Text
                     Visible: =If(ThisItem.LeadStatus="Rejected",true,false)
                     Width: =Parent.Width
                     X: =0
                     Y: =20
                     ZIndex: =1
 
-                    DataCardKey8 As label:
+                    lblLeadCommentHeadingVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(26, 26, 26, 1)
                         Font: =Font.Arial
@@ -1321,52 +1244,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue8 As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =ThisItem.LeadComment
-                        DelayOutput: =true
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        MaxLength: =Parent.MaxLength
-                        Mode: =TextMode.MultiLine
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Size: =If(Parent.Width<378,12,Parent.Width<500,14,16)
-                        Tooltip: =Parent.DisplayName
-                        Visible: =false
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardKey8.Y + DataCardKey8.Height + 5
-                        ZIndex: =2
-
-                    ErrorMessage7 As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardValue8.Y + DataCardValue8.Height
-                        ZIndex: =3
-
-                    StarVisible7 As label:
-                        Align: =Align.Center
-                        Height: =DataCardKey8.Height
-                        Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                        Width: =30
-                        Y: =DataCardKey8.Y
-                        ZIndex: =4
-
-                    DataCardKey8_1 As label:
+                    lblLeadCommentvalueVDS As label:
                         AutoHeight: =true
                         Color: =RGBA(26, 26, 26, 1)
                         Font: =Font.Arial
@@ -1377,7 +1255,7 @@ ViewDetailsScreen As screen:
                         VerticalAlign: =VerticalAlign.Top
                         Width: =Parent.Width - 80
                         X: =30
-                        Y: =DataCardKey8.Height+DataCardKey8.Y
+                        Y: =lblLeadCommentHeadingVDS.Height+lblLeadCommentHeadingVDS.Y
                         ZIndex: =5
 
             Label4 As label:
