--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -627,7 +627,7 @@ ChatScreen As screen:
                     X: =1
                     ZIndex: =5
 
-    PopopMandatorySS_3 As groupContainer.manualLayoutContainer:
+    PopopMandatoryCS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarNotification
